# server-management-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-nir.yml  rust.yml
install/: install.sh  uninstall.sh
no-internet-restart/: Cargo.toml  install.sh  uninstall.sh  wifi-restart.service
no-internet-restart/src/: main.rs
src/: main.rs  structs.rs
virtual-machine-manager/: Cargo.toml  install.sh  uninstall.sh  virtual-machine-manager.service
virtual-machine-manager/src/: main.rs
