[package]
name = "vm-restart-script"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy="0.4.0"
chrono = "0.4.19"
reqwest="0.11.4"
tokio = { version = "1.7.1", features = ["full"] }
serde_json="1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
dirs="3.0.2"